# Focus_Project

./: CMakeLists.txt  Focus_Project.c  ReadmeEN.txt
Apps/Entry/: CMakeLists.txt  Entry_Point.c  Entry_Point.h
Apps/Wallpaper/: CMakeLists.txt  ImageData.c  ImageData.h
Modules/Config/: DEV_Config.c
Modules/Fonts/: font71.c  fonts.h
Modules/GUI/: CMakeLists.txt  GUI_Paint.c  GUI_Paint.h
Modules/LCD/: LCD_1in3.c  LCD_1in3.h
Modules/PushButtons/: CMakeLists.txt  PushButton.c  PushButton.h
